--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "promise": "7.1.1",
     "extend": "^3.0.0",
     "inherits": "~2.0.3",
-    "kurento-client-core": "Kurento/kurento-client-core-js#master",
+    "kurento-client-core": "git+https://github.com/mconf/kurento-client-core-js.git#mconf",
     "kurento-client-elements": "Kurento/kurento-client-elements-js#master",
     "kurento-client-filters": "Kurento/kurento-client-filters-js#master",
     "kurento-jsonrpc": "Kurento/kurento-jsonrpc-js#master",
