Point client-core/filters/elements deps to our forks

--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
     "promise": "7.1.1",
     "extend": "^3.0.0",
     "inherits": "^2.0.0",
-    "kurento-client-core": "^6.0.0",
-    "kurento-client-elements": "^6.0.0",
-    "kurento-client-filters": "^6.0.0",
+    "kurento-client-core": "git+https://github.com/mconf/kurento-client-core-js.git#mconf-6.x-release",
+    "kurento-client-elements": "git+https://github.com/mconf/kurento-client-elements-js.git#mconf-6.x-release",
+    "kurento-client-filters": "git+https://github.com/mconf/kurento-client-filters-js.git#mconf-6.x-release",
     "kurento-jsonrpc": "^6.0.0",
     "promisecallback": "0.0.4",
     "reconnect-ws": "KurentoForks/reconnect-ws#master",
